week4/day27/devops/kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: ai-productivity-ingress

spec:
  rules:
    - host: ai-productivity.local

      http:
        paths:
          - path: /

            pathType: Prefix

            backend:
              service:
                name: frontend

                port:
                  number: 5173
